[package]
name = "wanderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mengine-quad = { path = "../../" }
macroquad = "0.3.13"
anyhow = "1"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = ["v4", "fast-rng"]